add Chat Text Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,4 +150,8 @@
         sending the fetched token to the server or subscribing to the PubSub topic. Please try
         running the sample again.</string>
     <string name="no_audio" translatable="false">Switch off Audio</string>
+
+    <string name="chat_hint">Type a message...</string>
+    <string name="someone_typing">%s is typing ...</string>
+    <string name="lost_connection">Lost connection...</string>
 </resources>
