--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,5 @@
     <string name="title_example">Ngoc Hung</string>
     <string name="request_permission">Need camera permisstion to video call</string>
     <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>
+    <string name="chat_send_tv">SEND</string>
 </resources>
