adjust chat text screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,11 +151,12 @@
         running the sample again.</string>
     <string name="no_audio" translatable="false">Switch off Audio</string>
 
-    <string name="chat_hint">Type a message...</string>
+    <string name="chat_hint">Tin nhắn mới</string>
     <string name="someone_typing">%s is typing ...</string>
     <string name="lost_connection">Lost connection...</string>
     <string name="title_example">Ngoc Hung</string>
     <string name="request_permission">Need camera permisstion to video call</string>
     <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>
-    <string name="chat_send_tv">SEND</string>
+    <string name="chat_send_tv">Gửi</string>
+    <string name="chat_text_title">Chat với Viettel</string>
 </resources>
