--- a/ipcclib/src/main/res/values/strings.xml
+++ b/ipcclib/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name" translatable="no">AppRTC</string>
+  <string name="app_name" translatable="no">IPCC</string>
   <string name="settings_name" translatable="no">AppRTC Settings</string>
   <string name="disconnect_call">Disconnect Call</string>
   <string name="room_names">Online Users:</string>
@@ -151,11 +151,13 @@
     running the sample again.</string>
   <string name="no_audio" translatable="false">Switch off Audio</string>
 
-  <string name="chat_hint">Type a message...</string>
-  <string name="someone_typing">%s is typing ...</string>
-  <string name="lost_connection">Lost connection...</string>
-  <string name="title_example">Ngoc Hung</string>
-  <string name="request_permission">Need camera permisstion to video call</string>
+  <string name="chat_hint">Soạn tin nhắn...</string>
+  <string name="someone_typing">%s đang nhập nội dung ...</string>
+  <string name="lost_connection">Mất kết nối...</string>
+  <string name="title_example"></string>
+  <string name="request_permission">Yêu cầu cho phép quyền truy cập camera để gửi hình ảnh</string>
   <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>
-  <string name="chat_send_tv">SEND</string>
+  <string name="chat_send_tv">Gửi</string>
+  <string name="chat_text_title">Chat với Viettel</string>
+  <string name="connecting">Đang kết nối...</string>
 </resources>
