- Add chat video

--- a/ipcclib/src/main/res/values/strings.xml
+++ b/ipcclib/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   <string name="calldialog_question">Answer call?</string>
   <string name="calldialog_answer">Answer</string>
   <string name="calldialog_hangung">Hangup</string>
-  <string name="channel_error_title">Connection error</string>
+  <string name="channel_error_title">Lỗi kết nối</string>
   <string name="connecting_to">Connecting to: %1$s</string>
   <string name="missing_wsurl">FATAL ERROR: Missing ws url to connect to</string>
   <string name="missing_from">FATAL ERROR: Missing username to connect from</string>
