--- a/ipcclib/src/main/res/values/strings.xml
+++ b/ipcclib/src/main/res/values/strings.xml
@@ -160,4 +160,5 @@
   <string name="chat_send_tv">Gửi</string>
   <string name="chat_text_title">Chat với Viettel</string>
   <string name="connecting">Đang kết nối...</string>
+  <string name="drag_video_show_full">Phóng to</string>
 </resources>
